--- a/index.html
+++ b/index.html
@@ -12905,13 +12905,13 @@
 
                                 <div class="flex-block__element flex-block__element--element_id_23879 flex-block__element--text  flex-block__element--block-blockID--d6b837ac1e0e  flex-block__element--editorTagsFix  flex-block__element--synced " style="">
                                     <div data-font='second_level/subtitle_1' class="flex-block__text-content  height-auto">
-                                        <br><br><p><span class="has-inline-font" style="font-family:HKGrotesk SemiBold">DOCUMENTING YOUR LOVE, YOUR WAY | Every Unique Story, Style, & Smile</span></p>
+                                        <br><p><span class="has-inline-font" style="font-family:HKGrotesk SemiBold">DOCUMENTING YOUR LOVE, YOUR WAY | Every Unique Story, Style, & Smile</span></p>
                                     </div>
                                 </div>
 
                                 <div class="flex-block__element flex-block__element--element_id_31852 flex-block__element--text  flex-block__element--block-blockID--d6b837ac1e0e  flex-block__element--editorTagsFix  flex-block__element--synced " style="">
                                     <div data-font='third_level/navigation' class="flex-block__text-content  height-auto">
-                                        <p><span style="color:var(--scheme_1--text--default)">Rohit Koli Photography | Cinematography |  Weddings | Engagements | Birthdays | Receptions | Model Shoots | Every Occasion</span></p>
+                                        <br><p><span style="color:var(--scheme_1--text--default)">Rohit Koli Photography | Cinematography |  Weddings | Engagements | Birthdays | Receptions | Model Shoots | Every Occasion</span></p><br>
                                     </div>
                                 </div>
                                 <script data-element-id="flex-block__element--element_id_be63b676fc3d" data-element-device="desktop" type="text/template">
@@ -12922,7 +12922,7 @@
                                     target="_self" style="">
       <span class="flex-block__element--button__content flex-block__element--button__content--hoverEffect-default  ">
         <span data-font='third_level/primary_cta' class="flex-block__text-content ">
-            <br><br><p>Contact Me</p>
+            <p>Contact Me</p>
         </span>
       </span>
     </a>
