--- a/index.html
+++ b/index.html
@@ -12911,9 +12911,10 @@
 
                                 <div class="flex-block__element flex-block__element--element_id_31852 flex-block__element--text  flex-block__element--block-blockID--d6b837ac1e0e  flex-block__element--editorTagsFix  flex-block__element--synced " style="">
                                     <div data-font='third_level/navigation' class="flex-block__text-content  height-auto">
-                                        <br><p><span style="color:var(--scheme_1--text--default)">Rohit Koli Photography | Cinematography |  Weddings | Engagements | Birthdays | Receptions | Model Shoots | Every Occasion</span></p><br>
+                                        <br><p><span style="color:var(--scheme_1--text--default)">Rohit Koli Photography | Cinematography |  Weddings | Engagements | Birthdays | Receptions | Model Shoots | Every Occasion</span></p>
                                     </div>
                                 </div>
+                                <br>
                                 <script data-element-id="flex-block__element--element_id_be63b676fc3d" data-element-device="desktop" type="text/template">
                                     &lt;div class=&quot;flex-block__element flex-block__element--element_id_be63b676fc3d flex-block__element--text flex-block__element--block-blockID--d6b837ac1e0e flex-block__element--editorTagsFix &quot; style=&quot;&quot;&gt; &lt;div data-font=&#039;third_level/navigation&#039;
                                     class=&quot;flex-block__text-content height-auto&quot;&gt; &lt;p&gt;&lt;span style=&quot;color:var(--scheme_1--text--default)&quot;&gt;MUMBAI-PUNE, MH + All INDIA&lt;/span&gt;&lt;/p&gt; &lt;/div&gt; &lt;/div&gt;
