--- a/index.html
+++ b/index.html
@@ -12911,7 +12911,7 @@
 
                                 <div class="flex-block__element flex-block__element--element_id_31852 flex-block__element--text  flex-block__element--block-blockID--d6b837ac1e0e  flex-block__element--editorTagsFix  flex-block__element--synced " style="">
                                     <div data-font='third_level/navigation' class="flex-block__text-content  height-auto">
-                                        <br><p><span style="color:var(--scheme_1--text--default)">Rohit Koli Photography | Cinematography |  Weddings | Engagements | Birthdays | Receptions | Model Shoots | Every Occasion</span></p><br><br>
+                                        <br><p><span style="color:var(--scheme_1--text--default)">Rohit Koli Photography | Cinematography |  Weddings | Engagements | Birthdays | Receptions | Model Shoots | Every Occasion</span></p>
                                     </div>
                                 </div>
                                 <script data-element-id="flex-block__element--element_id_be63b676fc3d" data-element-device="desktop" type="text/template">
@@ -12922,7 +12922,7 @@
                                     target="_self" style="">
       <span class="flex-block__element--button__content flex-block__element--button__content--hoverEffect-default  ">
         <span data-font='third_level/primary_cta' class="flex-block__text-content ">
-            <p>Contact Me</p>
+            <p>Contact Me</p><br><br>
         </span>
       </span>
     </a>
